fix(quasar): Misc adjustment for dialogs (#4853)
* fix(quasar): Misc adjustment for dialogs

- make maxHeight of dialogs smaller - it overflows on Android
- scrollIntoView QInput and QSelect on mobiles
- use fade as transitionShow in QSelect dialog on iOS
- make maxHeight of QSelect dialog smaller (overflow on Android)
- make QSelect dialog without useInput larger on iOS

* Update QMenu.js

* Update dialog.styl

* Update dialog.styl

* Update select.styl

* Update dialog.styl

* Update select.styl

--- a/ui/src/components/select/select.styl
+++ b/ui/src/components/select/select.styl
@@ -48,5 +48,9 @@
     color white
     background $grey-9
 
-body.platform-ios .q-select__dialog
+// addressbar always gets shown, so need to slim this down
+body.mobile:not(.cordova) .q-select__dialog
+  max-height calc(100vh - 80px) !important
+
+body.platform-ios .q-dialog__inner--top .q-select__dialog
   max-height 50vh !important
